--- a/css/styles.css
+++ b/css/styles.css
@@ -11440,12 +11440,22 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/header-bg.jpg");
+  background-color: #000;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
 }
+
+header.heroimage {
+  background-image: url("../assets/img/header-bg.jpg");
+}
+
+header.heroimagethree {
+  background-image: url("../assets/img/unsplash-texture-1.jpg");
+}
+
+
 header.masthead .masthead-subheading {
   font-size: 1.5rem;
   font-style: italic;
