--- a/css/styles.css
+++ b/css/styles.css
@@ -3060,9 +3060,9 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #ffc800;
-  border-color: #ffc800;
+  color: #000000;
+  background-color: #ff5500;
+  border-color: #ff5500;
 }
 .btn-primary:hover {
   color: #fff;
